Revert "Fix(breadcrumbs): disabled scroll bar visible in browsers on windows"
This reverts commit 58211563cb69626396779664859fb12608e8c1d0.

--- a/src/stylesheets/modules/breadcrumbs.styl
+++ b/src/stylesheets/modules/breadcrumbs.styl
@@ -94,6 +94,7 @@ $flex-row()
         margin-bottom: 4px
         max-height: 200px
         overflow-x: hidden
+        overflow-y: scroll
 
         li
           padding: 0 20px
